--- a/index.html
+++ b/index.html
@@ -7704,7 +7704,7 @@
             });
         }
         
-        // Public API
+        // Public API .
         return {
             init,
             resetToSampleData,
